--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,6 +34,13 @@
     .hero_section{
       @apply bg-[url('./assets/images/hero-bg.png')] bg-no-repeat bg-center bg-cover;
     }
+    .form_label{
+      @apply text-textColor font-semibold text-[16px] leading-7 mb-2;
+    }
+  
+    .form_input{
+      @apply w-full px-4 py-3 border rounded-[8px] border-solid border-[#0066ff61] focus:outline-none focus:border-primaryColor text-[16px] leading-7 text-headingColor placeholder:text-textColor cursor-pointer
+    }
   }
 
 
